# fire-extinguishing-robot

./: README.md
project-ros/: CMakeLists.txt  README.md  package.xml
project-ros/launch/: fire_extinguisher_robot.launch
project-ros/src/: camera.py  detection.py  fire_detector.py  image_converter.py  image_feature.py  main.py  moveit_joint_goals.py  pedestrain.py  victim_detector.py
